test/spec_vectors/local_tee/fail/module_1.wat
(module (func $type-local-num-vs-num (result i64) (local i32) (local.tee 0 (i32.const 0))))